# shader-advent-2024

./: .gitignore  README.md
day-01/: README.md
day-02/: SmoothMidiModulation.md  graph.html
day-03/: README.md
day-03/code/: card.py  gears.frag  pyproject.toml  snow.frag  torus.frag  tunnel.frag
day-04/: README.md
day-05/: README.md
day-06/: README.md
day-07/: README.md
day-08/: README.md
day-09/: 200_boxes.klproj  2d_tree.klproj  README.md  bubble_bobble.klproj  delusions.klproj  falling_leaves.klproj  neonwave.klproj  parametric3d.klproj  solid_supershapes.klproj  starscroller_variant.klproj
day-10/: README.md
day-11/: README.md
day-11/sixel-app/: GlobalUsings.cs  Program.cs  sixel-app.csproj  sixel-app.sln
day-12/: README.md
day-12/src/: index.html  styles.css
day-13/: README.md
day-14/: README.md
day-14/assets/: shader00.glsl
day-15/: README.md
day-15/src/: merry-christmas.lua
day-16/: README.md
day-17/: README.md
day-18/: README.md
day-18/wgl-app/wgl/: wgl.cpp  wgl.sln  wgl.vcxproj  wgl.vcxproj.filters
day-19/: README.md
day-19/wgl-app/wgl/: REPORT.html  wgl.cpp  wgl.sln  wgl.vcxproj
day-20/: README.md  blog_shaderadvent2024.html
day-21/: README.md
day-22/: README.md
day-23/: README.md
day-24/: README.md
day-25/: README.md
