[tool.poetry]
name = "shader-holiday-card"
version = "0.1.0"
description = "Scripts and instructions to create barrier-grid animated holiday cards"
authors = ["Veikko Sariola <5684185+vsariola@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyOpenGL = "^3.1.5"
glfw = "^2.4.0"
Pillow-PIL = "^0.1dev"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
